--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "start:csr": "vite preview",
+    "typecheck": "react-router typegen && tsc",
+    "lint": "eslint .",
+    "check:type": "tsc --project tsconfig.json --noEmit",
+    "check:lint": "eslint . --fix --quiet",
+    "check:prettier": "prettier --write --ignore-unknown \"**/*\" ",
+    "check:all": "yarn check:prettier && yarn check:lint && yarn check:type",
+    "prepare": "husky"
   },
   "dependencies": {
     "@react-router/node": "^7.7.1",
@@ -17,14 +24,24 @@
     "react-router": "^7.7.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.34.0",
     "@react-router/dev": "^7.7.1",
     "@tailwindcss/vite": "^4.1.4",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.2.10",
     "@types/node": "^20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "eslint": "^9.34.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
+    "prettier": "^3.6.2",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3",
+    "typescript-eslint": "^8.41.0",
     "vite": "^6.3.3",
+    "vite-plugin-devtools-json": "^1.0.0",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
