--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "check:lint": "eslint . --fix --quiet",
     "check:prettier": "prettier --write --ignore-unknown \"**/*\" ",
     "check:all": "yarn check:prettier && yarn check:lint && yarn check:type",
-    "prepare": "husky"
+    "prepare": "husky install"
   },
   "dependencies": {
     "@react-router/node": "^7.7.1",
